bug: images too large on mobile fix: added max-width to all images

--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -130,6 +130,10 @@ button:hover {
     opacity: 0.6;
 }
 
+img {
+    max-width: 90vw;
+}
+
 .hide {
     display: none;
 }
